[package]
name = "github-device-oauth"
version = "0.1.0" 
authors = ["Pedro Burgos <druskus20@gmail.com>"]
license = "MIT"
description = "A client for Github's OAuth Device Flow"
repository = "https://github.com/druskus20/github-device-flow"
keywords = ["github", "oauth", "device", "flow"]
readme = "README.md"
edition = "2021"
rust-version = "1.56"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] }
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
